Fix overflow

--- a/index.css
+++ b/index.css
@@ -38,8 +38,7 @@ a {
         text-decoration: underline;
     }
 .main {
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
     margin-top: 50px;
     height: calc(100vh - 50px);
     width: 100%;
@@ -48,6 +47,7 @@ a {
     height: 100%;
     width: 100%;
     padding: 15px;
+    overflow-y: scroll;
 }
 #home {
     background: url("public/images/background1.jpg") center / cover;
